Se actualiza la forma de devolver la creacion de las citas